* Fix a segmentation fault when parsing path nodes of type 'close'
* Add Clutter::Path::foreach() and Clutter::Path::to_cairo_path()
* Allow constructing Clutter::Path objects both by using the stringified
  SVG notation and by using lists of Clutter::PathNode objects
* Add more units to the test suite, covering Clutter::Path and Clutter::Event
* Fully document Clutter::Path

Clutter 1.000
=============
* First developers snapshot of the Clutter Perl bindings
* Depend on Clutter 1.0.0
* Drop the clutter-gtk, clutter-gst and clutter-cairo bindings
* Add more COGL bindings under Clutter::Cogl
* Port more examples from Clutter to Perl
* Provide more C API for bindings based on perl-Clutter
* Add ParamSpec bindings for colors and units

Clutter 0.820
=============
* Depend on Clutter 0.8.2
* Fix a typo in Clutter::Cogl->frustum()
* Add a Clutter::Cookbook POD

Clutter 0.802
=============
* Update the META.yml generation so that the contents are useful
  for CPAN and testers
* Add some initial wrappers for the COGL texture API; still
  experimental, will require more testing
* Fix the assignment of built-in alpha functions when creating
  a new Clutter::Alpha [Andrew Ruthven]
* Documentation fixes
* Better coverage for the test suite

Clutter 0.801
=============
* Compilation fixes required for compiling with Clutter installed
  from the 0.8.0 tarball
* Wrap Clutter::Gst::Audio::get_playbin()
* Wrap Clutter::Gst::VideoSink
* Enhance Clutter::Model and Clutter::Model::Iter bindings to
  allow pure-Perl implementations

Clutter 0.800
=============
* Require clutter-0.8 >= 0.8.0
* Resync with upstream API
* Wrap newly exposed COGL API as Clutter::Cogl
* Wrap newly added Gtk2::Clutter utility API
* Allow full implementation of Clutter::Container

Clutter 0.620
=============
* Require clutter-0.6 >= 0.6.2
* Require clutter-cairo-0.6 >= 0.6.1
* Require clutter-gtk-0.6 >= 0.6.1
* Add new API to Clutter::Texture::Cairo for sub-region updates
* Fix usage of glib-perl API